# cae_tools

./: .gitignore  Box_stats.ipynb  README.md  Untitled.ipynb  bin_map.ipynb  bin_map.py  bin_map_monthly_seasonal.py  class_mean.ipynb  class_mean.py  database_v0.db  database_v100_unet_sst.db  database_v10_vae.db  database_v11_vae.db  database_v12_vae.db  database_v13_vae.db  database_v14_elevation.db  database_v15_era5.db  database_v16_srcnn.db  database_v16_unet_vs_unetres.db  database_v17_shallow_vs_deep.db  database_v18_shallow_vs_deep.db  database_v19_gan.db  database_v1_albedoexp.db  database_v1_unet.db  database_v20_vgg.db  database_v21_bias.db  database_v21_hadukvsera5.db  database_v22_ssrd.db  database_v23_wo_ssrd.db  database_v24_wo_ssrd.db  database_v2_albedoexp.db  database_v2_deeper.db  database_v2_urbanexp.db  database_v3_resnet.db  database_v4_resnet.db  database_v5_resnet.db  database_v6_resnet.db  database_v7_resnet.db  database_v8_resnet.db  database_v9_vae.db  (+43 more)
cae_tool_env/conda-meta/: history
cae_tools/cli/: apply_cae.py  evaluate_cae.py  plot_data.py  query_database.py  train_cae.py  visual_and_stats_diagnostic_script.ipynb
cae_tools/models/: base_model.py  conv_ae_model.py  decoder.py  decoder_res_skip.py  decoder_skip.py  ds_dataset.py  encoder.py  encoder_res_skip.py  encoder_skip.py  encoder_unet_res.py  linear_model.py  model_evaluator.py  model_metric.py  model_sizer.py  unet.py  unet_attentiongate.py  unet_backup_mostrecent.py  unet_bkup.py  unet_gan.py  unet_original.py  vae_decoder.py  (+2 more)
scripts/: sync.sh
test/: test_specs.py
(+62 files in other folders)
