[metadata]
name = cae_tools
version = attr: cae_tools.VERSION
author = NCEO / Niall McCarroll
author_email = n.f.mccarroll@reading.ac.uk
description = Tools for working with convolutional auto-encoders for image=>image transformation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/surftemp/cae_tools
project_urls =
    Bug Tracker = https://github.com/surftemp/cae_tools/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
include_package_data = True

[options.entry_points]
console_scripts =
    train_cae = cae_tools.cli.train_cae:main
    apply_cae = cae_tools.cli.apply_cae:main
    evaluate_cae = cae_tools.cli.evaluate_cae:main

[options.packages.find]
where = src

